tests/NormalTests/paczka1/small_fuzzy/32189079.err
Error in line 2: GnSJyg S653 72,1
Error in line 3: GnSJyg A952 54,2
